basic 2d mesh & shader

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(engine STATIC
         include/math/vector.h
         include/gfx/mesh.h
         include/gfx/shader.h
+        include/gfx/base2d.h
 
         src/main.cpp
         src/system/timer.cpp
