--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -11,11 +11,13 @@ add_library(engine STATIC
         include/gfx/mesh.h
         include/gfx/shader.h
         include/gfx/base2d.h
+        include/gfx/texture.h
 
         src/main.cpp
         src/system/timer.cpp
         src/system/job_system.cpp
-        src/gfx/shader.cpp)
+        src/gfx/shader.cpp
+        src/gfx/texture.cpp)
 
 target_compile_definitions(engine PUBLIC UNICODE WIN32_LEAN_AND_MEAN)
 
