--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -6,9 +6,9 @@ add_library(engine STATIC
         include/singleton.h
         include/logging.h
         include/game.h
-        include/keyboard.h
         include/system/timer.h
         include/system/job_system.h
+        include/input/keyboard.h
         include/math/vector.h
         include/gfx/mesh.h
         include/gfx/instanced_mesh.h
@@ -18,9 +18,9 @@ add_library(engine STATIC
 
         src/logging.cpp
         src/main.cpp
-        src/keyboard.cpp
         src/system/timer.cpp
         src/system/job_system.cpp
+        src/input/keyboard.cpp
         src/gfx/shader.cpp
         src/gfx/texture.cpp)
 
