--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -31,4 +31,4 @@ target_compile_definitions(engine PUBLIC UNICODE WIN32_LEAN_AND_MEAN)
 
 target_include_directories(engine PUBLIC include)
 
-target_link_libraries(engine PUBLIC Opengl32 glad)
+target_link_libraries(engine PUBLIC Imm32 Opengl32 glad)
