--- a/proto2d/CMakeLists.txt
+++ b/proto2d/CMakeLists.txt
@@ -1,11 +1,7 @@
 add_executable(proto2d WIN32
         include/proto2d.h
-        include/state/log_viewer.h
-        include/state/terminal.h
 
-        src/proto2d.cpp
-        src/state/log_viewer.cpp
-        src/state/terminal.cpp)
+        src/proto2d.cpp)
 
 target_include_directories(proto2d PRIVATE include)
 
